Update test to use latest FFM API